# FastAPI_EduardoMendes

./: README.md
fast_zero/: .coverage  .env  alembic.ini  database.db  pyproject.toml
fast_zero/fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/fast_zero/routers/: auth.py  todo.py  users.py
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: 498a9cd4e9ab_create_todos_table.py  e4325aac86f6_initial_migration.py
fast_zero/migratons/: env.py
fast_zero/migratons/versions/: 40de89d3e2bb_create_users_table.py
fast_zero/tests/: test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py
