[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["GhaLuccas <gitsgab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.6"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"
ruff = "^0.8.4"

[toll.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"